added textarea-counter, its not working

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.1",
+    "react-textarea-count": "^1.0.3",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
